[package]
authors = ['Manta Network']
description = 'Pallet implementing the MantaPay protocol.'
edition = "2021"
homepage = 'https://manta.network'
license = 'GPL-3.0'
name = 'pallet-manta-pay'
readme = 'README.md'
repository = 'https://github.com/Manta-Network/Manta/'
version = '4.6.0'

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[[bin]]
name = "precompute_coins"
required-features = ["precompute-coins"]

[features]
# Default Features
default = ["std"]

# RPC Interface
rpc = [
  "jsonrpsee",
  "runtime",
  "serde",
  "sp-api",
  "sp-blockchain",
  "manta-support/rpc",
]

# Runtime API
runtime = ["sp-api"]

# Runtime Benchmarks
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "manta-primitives/runtime-benchmarks",
  "pallet-assets/runtime-benchmarks",
]

try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]

# Serde Serialization
serde = [
  "manta-support/serde",
]

# Standard Library
std = [
  "anyhow/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-api/std",
  "sp-std/std",
  "manta-primitives/std",
  "manta-accounting/std",
  "manta-crypto/std",
  "manta-util/std",
  "manta-pay/std",
  "manta-support/std",
]

# Precompute Benchmark Transactions
precompute-coins = [
  "anyhow",
  "indoc",
  "manta-accounting/test",
  "manta-pay/download",
  "manta-pay/test",
  "manta-pay/serde",
  "manta-pay/groth16",
  "manta-pay/bip32",
  "manta-pay/arkworks",
  "manta-util/std",
  "rand_chacha",
  "tempfile",
]

[dependencies]
# utils
anyhow = { workspace = true, optional = true }
base64 = { workspace = true }
indoc = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

# substrate dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }
sp-api = { workspace = true, optional = true }
sp-blockchain = { workspace = true, optional = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# JSON-RPC
jsonrpsee = { workspace = true, features = ["server", "macros"], optional = true }

# manta dependencies
manta-accounting = { workspace = true }
manta-crypto = { workspace = true }
manta-pay = { workspace = true }
manta-primitives = { workspace = true }
manta-support = { workspace = true }
manta-util = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
manta-crypto = { workspace = true, features = ["getrandom"] }
manta-pay = { workspace = true, features = ["groth16", "parameters", "scale", "download", "test"] }
pallet-asset-manager = { workspace = true }
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
pallet-tx-pause = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
tempfile = { workspace = true }
xcm = { workspace = true }
