[package]
authors = ['Manta Network']
description = 'Common code used across manta pallets'
edition = "2021"
homepage = 'https://manta.network'
license = 'GPL-3.0'
name = 'pallet-manta-support'
readme = 'README.md'
repository = 'https://github.com/Manta-Network/Manta/'
version = '4.6.0'

[dependencies]
# utils
anyhow = { workspace = true, optional = true, default-features = false }
base64 = { workspace = true, features = ["alloc"] }
indoc = { workspace = true, optional = true, default-features = false }
rand_chacha = { workspace = true, optional = true, default-features = false }
tempfile = { workspace = true, optional = true, default-features = false }

# substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }
sp-api = { workspace = true, optional = true, default-features = false }
sp-blockchain = { workspace = true, optional = true, default-features = false }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# manta dependencies
manta-accounting = { workspace = true }
manta-crypto = { workspace = true }
manta-pay = { workspace = true }
manta-primitives = { workspace = true }
manta-util = { workspace = true }

[features]
default = ["std"]

# Serde Serialization
serde = [
  "manta-pay/serde",
  "manta-util/serde",
  "manta-util/serde_with",
]

# RPC Interface
rpc = [
  "serde",
  "sp-api",
  "sp-blockchain",
]

# Standard Library
std = [
  "anyhow/std",
  "frame-support/std",
  "frame-system/std",
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-api/std",
  "sp-std/std",
  "manta-primitives/std",
  "manta-accounting/std",
  "manta-crypto/std",
  "manta-util/std",
  "manta-pay/std",
]
