[package]
authors.workspace = true
description = 'Common code used across manta pallets'
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = 'pallet-manta-support'
readme = 'README.md'
repository.workspace = true
version.workspace = true

[dependencies]
# utils
anyhow = { workspace = true, optional = true }
base64 = { workspace = true }
indoc = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

# substrate dependencies
codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
sp-api = { workspace = true, optional = true }
sp-blockchain = { workspace = true, optional = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# manta dependencies
manta-accounting = { workspace = true }
manta-crypto = { workspace = true }
manta-pay = { workspace = true }
manta-primitives = { workspace = true }
manta-util = { workspace = true }

[features]
default = ["std"]

# Serde Serialization
serde = [
  "manta-pay/serde",
  "manta-util/serde",
  "manta-util/serde_with",
]

# RPC Interface
rpc = [
  "serde",
  "sp-api",
  "sp-blockchain",
]

# Standard Library
std = [
  "anyhow/std",
  "frame-support/std",
  "frame-system/std",
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-api/std",
  "sp-std/std",
  "manta-primitives/std",
  "manta-accounting/std",
  "manta-crypto/std",
  "manta-util/std",
  "manta-pay/std",
]
