[package]
name       = "manta-xassets"
authors    = ['Manta Network']
edition    = '2021'
homepage   = 'https://manta.network'
license    = 'GPL-3.0'
repository = 'https://github.com/Manta-Network/Manta/'
version    = '3.1.0'

[dependencies]
codec                   = { package = "parity-scale-codec", version = "2.3.1", default-features = false }
log                     = { version = "0.4.14", default-features = false }
scale-info              = { version = "1.0", default-features = false, features = ["derive"] }

# Polkadot dependencies for xcmp
xcm                     = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.12" }
xcm-executor            = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.12" }

# Substrate dependencies
frame-support           = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.12" }
frame-system            = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.12" }
sp-core                 = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.12" }
sp-runtime              = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.12" }
sp-std                  = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.12" }

# Self dependencies
manta-primitives        = { path = "../../runtime/primitives", default-features = false }

[dev-dependencies]
sp-io                       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12" }
pallet-balances             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12" }
pallet-xcm                  = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.12" }
xcm-simulator               = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.12" }
xcm-builder                 = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.12" }
polkadot-core-primitives    = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.12" }
polkadot-parachain          = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.12" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.12" }
manta-xcm-support           = { path = '../../runtime/xcm-support' }
parachain-info              = { git = 'https://github.com/paritytech/cumulus.git', branch = "polkadot-v0.9.12" }
cumulus-pallet-dmp-queue    = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.12" }
cumulus-pallet-xcmp-queue   = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.12" }
cumulus-pallet-xcm          = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.12" }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus.git', branch = "polkadot-v0.9.12" }

[features]
default = ["std"]
std     = [
    "codec/std",
    "log/std",
    "frame-support/std",
    "frame-system/std",
    "manta-primitives/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "xcm/std",
    "xcm-executor/std",
]
