[package]
name = "pallet-fuso-mapobridge"
version = "4.0.2"
authors = ["UINB Tech <dev@fusotao.org>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.fusotao.org"
repository = "https://github.com/uinb/fusotao"
description = "Fusotao to mapo bridge pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37"  }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37"  }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37"  }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37"  }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37"  }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37"  }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37"  }
fuso-support = { path = "../fuso-support", default-features = false }
uint = { version = "0.8.3", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"]}
rlp = { version = "0.4.6", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num = { version = "0.3", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
hashbrown = "0.12"
ethereum-types = { version = "0.9.2", default-features = false }
ethabi = { git = "https://github.com/uinb/ethabi.git", package ="ethabi", branch = "fusotao" }
zeropool-bn = { version = "0.5.11", default-features = false }

# beefy
#beefy-primitives = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }

[dev-dependencies]
tiny-keccak = "1.4.0"
[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	#'beefy-primitives/std'
]
