[package]
authors = ["Manta Network"]
edition = "2021"
homepage = "https://manta.network"
license = "GPL-3.0"
name = "pallet-name-service"
repository = "https://github.com/Manta-Network/Manta/"
version = "4.6.0"

[dependencies]
codec = { workspace = true }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
safe_regex = { workspace = true }

manta-primitives = { workspace = true }
manta-support = { workspace = true }

scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "manta-primitives/runtime-benchmarks",
]

std = [
  "scale-info/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "sp-std/std",
  "manta-primitives/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
