[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pallet-name-service"
repository.workspace = true
version.workspace = true

[dependencies]
codec = { workspace = true }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
safe_regex = { workspace = true }

manta-primitives = { workspace = true }
manta-support = { workspace = true }

scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "manta-primitives/runtime-benchmarks",
]

std = [
  "scale-info/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "sp-std/std",
  "manta-primitives/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
